--- a/.github/workflows/build-willow.yml
+++ b/.github/workflows/build-willow.yml
@@ -19,17 +19,15 @@ on:
         type: choice
         options:
         - ESP32-S3-BOX
-      mode:
-        description: 'Mode'
-        required: true
-        default: 'client'
-        type: choice
-        options:
-        - client
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      # CORRECTION ICI: J'utilise 'master' au lieu de 'main'. L'image existe sous ce nom.
+      image: ghcr.io/tovera/willow-build:master
+      options: --user root
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -37,9 +35,10 @@ jobs:
           submodules: recursive
 
       - name: Build Willow
+        # J'ajoute la sécurité git pour éviter tout blocage
         run: |
-          chmod +x utils.sh
-          ./utils.sh build ${{ inputs.wake_word }} ${{ inputs.board }} --mode ${{ inputs.mode }}
+          git config --global --add safe.directory '*'
+          ./utils.sh build ${{ inputs.wake_word }} ${{ inputs.board }} --mode client
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
