--- a/.github/workflows/build-willow.yml
+++ b/.github/workflows/build-willow.yml
@@ -31,15 +31,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      # On garde l'image officielle Espressif car elle fonctionne bien
+      # On garde l'image officielle Espressif car elle est stable
       image: docker.io/espressif/idf:release-v5.1
       options: --user root
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        # MODIFICATION CRITIQUE : On a retiré "submodules: recursive"
-        # On laisse le script "install" gérer ça tout seul pour éviter le conflit.
+        with:
+          submodules: recursive # On laisse GitHub gérer les sous-dossiers proprement
 
       - name: Install Tools
         run: |
@@ -48,16 +48,20 @@ jobs:
       - name: Build Willow
         shell: bash
         run: |
-          # Sécurité Git pour éviter les erreurs de dossier
+          # 1. Sécurité Git
           git config --global --add safe.directory '*'
           
-          # On charge les outils ESP
+          # 2. On charge les outils ESP
           . $IDF_PATH/export.sh
           
-          # 1. On installe les dépendances (ADF, etc.) proprement
+          # 3. LE PATCH : On désactive la commande git qui plante dans le script
+          # On remplace "git submodule update..." par un commentaire "# skipped"
+          sed -i 's/git submodule update --init --recursive/# skipped crashing git command/g' utils.sh
+          
+          # 4. On lance l'installation (qui ne plantera plus grâce au patch)
           ./utils.sh install
           
-          # 2. On lance la fabrication
+          # 5. On lance la fabrication
           ./utils.sh build ${{ inputs.wake_word }} ${{ inputs.board }} --mode ${{ inputs.mode }}
 
       - name: Upload Artifact
