--- a/.github/workflows/build-willow.yml
+++ b/.github/workflows/build-willow.yml
@@ -31,37 +31,43 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      # On garde l'image officielle Espressif (stable et reconnue)
+      # On garde l'image Espressif qui fonctionne bien
       image: docker.io/espressif/idf:release-v5.1
       options: --user root
 
     steps:
-      - name: Checkout
+      - name: Checkout Willow
         uses: actions/checkout@v4
         with:
           submodules: recursive
 
       - name: Install Tools
+        run: apt-get update && apt-get install -y jq git curl wget
+
+      - name: Manual Dependency Install
         run: |
-          apt-get update && apt-get install -y jq git curl wget
+          # On télécharge nous-mêmes la librairie audio pour éviter que le script ne plante
+          git clone --recursive https://github.com/espressif/esp-adf.git esp-adf
 
       - name: Build Willow
         shell: bash
         run: |
-          # 1. Sécurité Git (obligatoire)
           git config --global --add safe.directory '*'
-          
-          # 2. On charge l'environnement ESP
           . $IDF_PATH/export.sh
           
-          # 3. LE PATCH MAGIQUE :
-          # On cherche la commande "git submodule update..." qui plante et on la remplace par "true" (succès forcé)
-          sed -i 's/git submodule update --init --recursive/true/g' utils.sh
+          # LE PATCH ULTIME :
+          # On supprime purement et simplement les lignes "git submodule" et "git clone" du script.
+          # Comme on a déjà tout téléchargé à l'étape d'avant, ces lignes ne servent à rien à part planter.
+          sed -i '/git submodule/d' utils.sh
+          sed -i '/git clone/d' utils.sh
           
-          # 4. On lance l'installation (elle ne plantera plus car la ligne buggée est désactivée)
+          # On définit le chemin vers la librairie qu'on vient de télécharger
+          export ADF_PATH=$PWD/esp-adf
+          
+          # On lance l'installation (qui est maintenant inoffensive)
           ./utils.sh install
           
-          # 5. On lance la fabrication
+          # On lance la fabrication
           ./utils.sh build ${{ inputs.wake_word }} ${{ inputs.board }} --mode ${{ inputs.mode }}
 
       - name: Upload Artifact
