--- a/.github/workflows/build-willow.yml
+++ b/.github/workflows/build-willow.yml
@@ -31,48 +31,41 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
+      # Image officielle Espressif (Stable)
       image: docker.io/espressif/idf:release-v5.1
       options: --user root
 
     steps:
       - name: Checkout Willow
         uses: actions/checkout@v4
-        # On ne télécharge pas les sous-modules automatiquement pour garder la main
+        # Pas de submodules pour garder la main
 
       - name: Install Tools
         run: apt-get update && apt-get install -y jq git curl wget
 
-      - name: Manual Dependency Install
+      - name: Manual Setup (Remplaçant l'install buggée)
         run: |
-          # 1. On crée le dossier et on télécharge esp-adf MANUELLEMENT (ça, ça marche sûr)
+          # 1. On crée le dossier et on télécharge esp-adf nous-mêmes
           mkdir -p deps
           git clone --recursive https://github.com/espressif/esp-adf.git deps/esp-adf
+          
+          # 2. On installe les librairies Python manuellement (ce que le script aurait dû faire)
+          # On tente d'installer s'il y a un fichier requirements, sinon on continue
+          [ -f requirements.txt ] && pip install -r requirements.txt || true
 
       - name: Build Willow
         shell: bash
+        env:
+          # On dit au système où on a rangé l'audio
+          ADF_PATH: /__w/willow/willow/deps/esp-adf
         run: |
           git config --global --add safe.directory '*'
           . $IDF_PATH/export.sh
           
-          # --- ZONE DE CHIRURGIE DU SCRIPT ---
+          # ON SAUTE L'ETAPE 'INSTALL' QUI PLANTAIT
+          # On passe direct au build
           
-          # PATCH 1 : Le script refuse de se lancer si 'deps' existe. On le force.
-          # On cherche la phrase d'erreur et on remplace le "exit 1" (Stop) qui suit par "true" (Continue)
-          sed -i '/You already have a deps directory/,+2 s/exit 1/true/' utils.sh
-          
-          # PATCH 2 : On supprime les commandes Git du script (puisqu'on a déjà tout téléchargé nous-mêmes)
-          sed -i '/git submodule/d' utils.sh
-          sed -i '/git clone/d' utils.sh
-          
-          # --- FIN DE LA CHIRURGIE ---
-          
-          # On définit le chemin vers l'audio (au cas où)
-          export ADF_PATH=$PWD/deps/esp-adf
-          
-          # On lance l'installation (Le script va râler mais continuer grâce au Patch 1)
-          ./utils.sh install
-          
-          # On lance la fabrication
+          echo "Lancement de la fabrication..."
           ./utils.sh build ${{ inputs.wake_word }} ${{ inputs.board }} --mode ${{ inputs.mode }}
 
       - name: Upload Artifact
