--- a/.github/workflows/build-willow.yml
+++ b/.github/workflows/build-willow.yml
@@ -57,16 +57,16 @@ jobs:
           git config --global --add safe.directory '*'
           . $IDF_PATH/export.sh
           
-          # --- CORRECTION DU CHEMIN (Le Chainon Manquant) ---
-          # On dit explicitement où se trouve le fichier board.h pour la S3-BOX
-          export AUDIO_BOARD_PATH=$ADF_PATH/components/audio_board/esp32_s3_box
-          
           # --- CHIRURGIE PRECEDENTE (On garde tout) ---
           sed -i '/You already have a deps directory/,+2 s/exit 1/true/' utils.sh
           sed -i '/git submodule/d' utils.sh
           sed -i '/git clone/d' utils.sh
           sed -i '/espressif\/esp-dsp/d' main/idf_component.yml || true
-          # -----------------------------------------------
+          
+          # --- LE PATCH ULTIME (FIX BOARD.H) ---
+          # On injecte le chemin de la carte S3-BOX directement dans le fichier CMakeLists.txt
+          # Cela force le système à inclure le bon dossier, quoi qu'il arrive.
+          sed -i '1i set(AUDIO_BOARD_PATH "/__w/willow/willow/deps/esp-adf/components/audio_board/esp32_s3_box")' CMakeLists.txt
           
           echo "Lancement de la fabrication finale..."
           ./utils.sh build ${{ inputs.wake_word }} ${{ inputs.board }} --mode ${{ inputs.mode }}
