--- a/.github/workflows/build-willow.yml
+++ b/.github/workflows/build-willow.yml
@@ -56,20 +56,24 @@ jobs:
           git config --global --add safe.directory '*'
           . $IDF_PATH/export.sh
           
-          # 1. On neutralise les sécurités du script (Exit si dossier existe + Git)
+          # 1. On désactive les commandes git/install qui plantent
           sed -i '/You already have a deps directory/,+2 s/exit 1/true/' utils.sh
           sed -i '/git submodule/d' utils.sh
           sed -i '/git clone/d' utils.sh
           
-          # 2. On supprime le conflit de version esp-dsp
+          # 2. On désactive le conflit de version
           sed -i '/espressif\/esp-dsp/d' main/idf_component.yml || true
           
-          # 3. LE PATCH ULTIME : ON ECIT L'ADRESSE EN DUR DANS LE FICHIER DE CONFIG
-          # On insère la variable AUDIO_BOARD_PATH tout en haut du fichier CMakeLists.txt
-          # Le chemin est absolu pour être sûr à 100%
-          sed -i '1i set(AUDIO_BOARD_PATH "/__w/willow/willow/deps/esp-adf/components/audio_board/esp32_s3_box")' CMakeLists.txt
+          # 3. LE CORRECTIF BRUTAL 
+
+[Image of hammer]
+
+          # On remplace la commande "idf.py build" dans le script par une version qui contient le chemin EN DUR.
+          # On injecte l'argument -DAUDIO_BOARD_PATH=... directement dans la commande de build.
+          BOARD_PATH="/__w/willow/willow/deps/esp-adf/components/audio_board/esp32_s3_box"
+          sed -i "s|idf.py build|idf.py build -DAUDIO_BOARD_PATH=$BOARD_PATH|g" utils.sh
           
-          echo "Lancement de la fabrication..."
+          echo "Lancement de la fabrication forcée..."
           ./utils.sh build ${{ inputs.wake_word }} ${{ inputs.board }} --mode ${{ inputs.mode }}
 
       - name: Upload Artifact
