--- a/.github/workflows/build-willow.yml
+++ b/.github/workflows/build-willow.yml
@@ -56,24 +56,25 @@ jobs:
           git config --global --add safe.directory '*'
           . $IDF_PATH/export.sh
 
-          # 1. Patch : Desactiver les commandes Git du script original
+          # 1. Patch : Désactive les commandes bloquantes du script
+          sed -i '/You already have a deps directory/,+2 s/exit 1/true/' utils.sh
           sed -i '/git submodule/d' utils.sh
           sed -i '/git clone/d' utils.sh
-          
-          # 2. Patch : Eviter le plantage si le dossier deps existe
-          sed -i '/You already have a deps directory/,+2 s/exit 1/true/' utils.sh
-          
-          # 3. Patch : Retirer le conflit de version esp-dsp
           sed -i '/espressif\/esp-dsp/d' main/idf_component.yml || true
 
-          # 4. Patch : FORCER LE CHEMIN DE LA CARTE (Fix board.h)
-          # On ecrit la ligne de configuration directement au debut du fichier CMakeLists.txt
-          # Cela force le compilateur a inclure le dossier de la S3-BOX
-          echo 'set(AUDIO_BOARD_PATH "${CMAKE_CURRENT_SOURCE_DIR}/deps/esp-adf/components/audio_board/esp32_s3_box")' > header_fix.txt
-          cat header_fix.txt CMakeLists.txt > CMakeLists.new
-          mv CMakeLists.new CMakeLists.txt
+          # 2. LE CORRECTIF "FORCE-FEEDING" 
+          # On définit le chemin exact du dossier qui contient board.h
+          BOX_PATH="/__w/willow/willow/deps/esp-adf/components/audio_board/esp32_s3_box"
+          
+          # On l'injecte dans les drapeaux du compilateur (CFLAGS). 
+          # Le "-I" signifie "Include this directory". C'est un ordre direct au compilateur.
+          export CFLAGS="$CFLAGS -I$BOX_PATH -I$BOX_PATH/include"
+          export CXXFLAGS="$CXXFLAGS -I$BOX_PATH -I$BOX_PATH/include"
+          
+          # On définit aussi la variable standard, au cas où.
+          export AUDIO_BOARD_PATH=$BOX_PATH
 
-          echo "Lancement de la fabrication..."
+          echo "Lancement de la fabrication avec injection CFLAGS..."
           ./utils.sh build ${{ inputs.wake_word }} ${{ inputs.board }} --mode ${{ inputs.mode }}
 
       - name: Upload Artifact
