--- a/.github/workflows/build-willow.yml
+++ b/.github/workflows/build-willow.yml
@@ -56,23 +56,28 @@ jobs:
           git config --global --add safe.directory '*'
           . $IDF_PATH/export.sh
 
-          # 1. Patchs de sécurité du script (On garde ce qui marche)
+          # 1. Patch : Désactive les commandes bloquantes du script
           sed -i '/You already have a deps directory/,+2 s/exit 1/true/' utils.sh
           sed -i '/git submodule/d' utils.sh
           sed -i '/git clone/d' utils.sh
           sed -i '/espressif\/esp-dsp/d' main/idf_component.yml || true
 
-          # 2. LE VRAI CHANGEMENT : MODIFICATION DE LA LIBRAIRIE DIRECTEMENT
-          # On va dans le dossier de la librairie audio et on force la variable AUDIO_BOARD_PATH
-          # directement dans son fichier de compilation.
-          # ${CMAKE_CURRENT_LIST_DIR} veut dire "le dossier où je suis", donc ça pointe direct sur le bon dossier.
+          # 2. LE PATCH BARBARE : COPIE PHYSIQUE DES FICHIERS 
+          # Le compilateur cherche "board.h" dans ".../audio_board/include/"
+          # Le fichier est dans ".../audio_board/esp32_s3_box/"
+          # ON LE DÉPLACE DE FORCE.
           
-          COMPONENT_CMAKE="deps/esp-adf/components/audio_board/CMakeLists.txt"
-          sed -i '1i set(AUDIO_BOARD_PATH ${CMAKE_CURRENT_LIST_DIR}/esp32_s3_box)' $COMPONENT_CMAKE
+          echo "Déplacement manuel des fichiers board.h..."
           
-          # Vérification (pour être sûr que la ligne est bien ajoutée)
-          echo "Vérification du patch :"
-          head -n 3 $COMPONENT_CMAKE
+          SOURCE_DIR="deps/esp-adf/components/audio_board/esp32_s3_box"
+          DEST_DIR="deps/esp-adf/components/audio_board/include"
+          
+          # On copie board.h et board_pins_config.h directement dans le dossier include général
+          cp $SOURCE_DIR/board.h $DEST_DIR/board.h
+          cp $SOURCE_DIR/board_pins_config.h $DEST_DIR/board_pins_config.h
+          
+          # On vérifie que la copie a marché
+          ls -l $DEST_DIR/board.h
 
           echo "Lancement de la fabrication..."
           ./utils.sh build ${{ inputs.wake_word }} ${{ inputs.board }} --mode ${{ inputs.mode }}
